--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@microsoft/fetch-event-source": "^2.0.1",
+    "@moefe/vue-aplayer": "^2.0.0-beta.5",
     "ace-builds": "^1.33.2",
     "core-js": "^3.8.3",
     "echarts": "^4.1.0",
     "element-ui": "^2.15.14",
     "file-saver": "^2.0.5",
-    "sortablejs": "^1.15.2",
+    "sortablejs": "^1.15.6",
     "vant": "^2.13.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
